# blob_json

./: .env  .gitignore  Cargo.toml  README.md  run.sh
src/: configuration_parameters.rs  log.rs  main.rs
src/process/: mod.rs
src/process/data/: blob.json  log.txt
src/process/process_data/: mod.rs
src/process/writer/: mod.rs
